# demo_streamlit

./: .pre-commit-config.yaml  README.md  main.py  mypy.ini  pyproject.toml
demo_streamlit/: app_state.py  callbacks.py  initialize_session_state.py  load_data.py  main.py  plot.py  query_params.py  settings.py  view.py
